# neutrino-interferometry

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: adiabatic_sun.py  adiabatic_sun_ssm.py  adiabatic_sun_ssm_test.py  adiabatic_sun_test.py  faser_sterile.py  juno.py  mass_states.py  matter_constant.py  matter_constant_test.py  matter_layer.py  matter_layer_mps.py  matter_layer_mps_test.py  matter_layer_test.py  matter_prem.py  matter_prem_test.py  msw_lma_upturn.py  non_adiabatic_sn.py  non_adiabatic_sun.py  pmns.py  solar_production_phase_space.py  sterile_raa_plot.py  vacuum_2d_pmns.py  vacuum_2flavors.py  vacuum_backend.py  vacuum_backend_test.py  vacuum_minimal.py  vacuum_pmns.py  vacuum_pmns_variable.py  vacuum_sterile.py
src/neutrino_interferometry/hamiltonian/: base.py
src/neutrino_interferometry/models/: mass.py  mixing.py
src/nu_waves/: MixingParameters.py  version.py
src/nu_waves/backends/: __init__.py  base.py  jax_backend.py  numpy_backend.py  torch_backend.py
src/nu_waves/globals/: backend.py
src/nu_waves/hamiltonian/: base.py  matter.py  matter_constant.py  vacuum.py
src/nu_waves/interactions/: ibd_cross_section.py
src/nu_waves/matter/: msw.py  prem.py  solar.py
src/nu_waves/models/: mass.py  mixing.py  spectrum.py
src/nu_waves/propagation/: new_oscillator.py  oscillator.py  solvers.py
src/nu_waves/sources/: reactor_flux.py
src/nu_waves/state/: wave_function.py
src/nu_waves/utils/: units.py
tests/: test_api.py  test_vacuum_pmns.py
