[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "nu-waves"
version = "1.2.0"  # keep in sync with src/nu_waves/version.py unless you switch to dynamic
description = "Flavour-oscillation probabilities for neutrinos with numpy/torch backends."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "LGPL-2.1-or-later" }
authors = [{ name = "Nadrino" }]
keywords = ["neutrino", "oscillations", "physics", "PMNS"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
torch = [
    # `pip install nu-waves[torch]` but not strictly a dependency
    "torch>=2.0"
]
plot = [
    "matplotlib>=3.7"
]
# CI will install: `pip install .[dev]`
dev = [
    "pytest",
    "pytest-cov"
]


[project.urls]
Homepage = "https://github.com/nadrino/neutrino-interferometry"
Issues   = "https://github.com/nadrino/neutrino-interferometry/issues"

[tool.hatch.build.targets.sdist]
include = ["src/nu_waves", "README.md", "LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["src/nu_waves"]
